# lem_in

./: 0.gv  1.gv  10.gv  10k_432  2.gv  20.gv  20k_543  25k_543  3.gv  30.gv  4.gv  40.gv  5.gv  50k_543  50k_5543  CMakeLists.txt  Makefile  author  check.sh  input.txt  lem-in  map1  map_plus_2  test.sh  test_str_len.c  to_jpg.sh  to_jpg_win.sh  vis.py  visu.sh
checker/lemin-tools/: .map  .map_old  map2  out.tmp
checker/lemin-tools/.map_err/: map1.err.202018191718
includes/: lem_in.h
lib/libft/: .gitignore  CMakeLists.txt  Makefile
lib/libft/includes/: ft_printf.h  libft.h  libft_structs.h
lib/libft/src/: fast_get_next_line.c  ft_abs.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_ceil.c  ft_hash.c  ft_hash_del.c  ft_hash_tab.c  ft_heap_add.c  ft_heap_merge.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstappend.c  ft_lstd_collapse.c  ft_lstd_del.c  ft_lstd_pop_front.c  ft_lstd_push_back.c  ft_lstd_push_front.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memjoin.c  ft_memmove.c  (+52 more)
lib/libft/src/ft_printf_src/: apply_flags.c  data.c  e_double.c  e_double_tool.c  f_double.c  ft_printf.c  int_funcions.c  parse.c  parse_tool.c  print_tool.c  string_tool.c  tools.c
src/: fr_remove_egde.c  ft_accept_new_path.c  ft_accept_path.c  ft_add_and_return_vertex.c  ft_add_ant.c  ft_add_edge.c  ft_add_line.c  ft_add_to_hash.c  ft_add_vertex.c  ft_char_in_str.c  ft_check_n_add_edge.c  ft_convert_graph.c  ft_count_char.c  ft_del_graph.c  ft_delete_graph.c  ft_delete_hash.c  ft_find_in_hash.c  ft_find_shortest_path.c  ft_find_vertex.c  ft_get_ants_count.c  ft_get_edges.c  ft_get_graph.c  ft_get_next_pointer.c  ft_get_pash_len.c  ft_get_valid_nbr.c  ft_get_vertex.c  ft_grahp_dfs.c  ft_init_graph.c  ft_init_hash.c  ft_init_memory.c  ft_min_cost_flow.c  ft_new_edge.c  ft_new_path_list.c  ft_new_vertex.c  ft_print_edge.c  ft_print_egde_list.c  ft_print_error.c  ft_print_graph.c  ft_print_map.c  ft_print_mem.c  (+25 more)
src/inactive/: ft_add_vertex_front.c  ft_check_n_add_edge.c  ft_delete_hash.c  ft_find_in_hash.c  ft_find_shortest_path.c  ft_print_egde_list.c  ft_print_matrix.c  ft_print_tools.c  ft_queue_new.c  ft_queue_pop.c  ft_set_vertex.c  inactive_prototypes.h  short_test.c  test_graph.c
visual/: map.out  vis.py
